# mastodon-a11y-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
