[package]
name = "mastodon-a11y-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/untitaker/mastodon-a11y-bot"
repository = "https://github.com/untitaker/mastodon-a11y-bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
